# enable-corpus-explorer

./: .env.example  .gitignore  README.md  pyproject.toml
app/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
app/public/: clusters.json  umap.json
app/scripts/: enrich-key-items.ts  generate-clusters.ts
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/airtable-test/: route.ts
app/src/app/api/ask/: route.ts
app/src/app/api/corpus/: route.ts
app/src/components/: ChatInterface.tsx  Citation.tsx  CorpusExplorer.tsx  KnowledgeExplorer.tsx  ModeToggle.tsx  SourcesPanel.tsx
app/src/lib/: airtable.ts  anthropic.ts  prompt.ts  retrieval.ts  slack.ts
eval/: README.md  __init__.py  run_golden.py
ingestion/: __init__.py  build_visualization.py  chunk.py  embed_index.py  enrich.py  extract.py  fix_titles.py  pipeline.py
