[project]
name = "restoration-intelligence"
version = "0.1.0"
description = "Ingestion and eval pipeline for the Restoration Intelligence RAG system"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",        # PDF extraction with page tracking
    "openpyxl>=3.1",        # Read/write the metadata workbook
    "pinecone>=5.0",        # Vector DB client (formerly pinecone-client)
    "voyageai>=0.3",        # Voyage embeddings + reranker
    "anthropic>=0.40",      # Claude API for enrichment + chat
    "python-dotenv>=1.0",   # Load .env
    "tqdm>=4.66",           # Progress bars
    "tiktoken>=0.7",        # Token counting for chunking
    "umap-learn>=0.5",      # 2D projection for the explorer tab
    "scikit-learn>=1.4",    # umap-learn dependency, also for any clustering
    "numpy>=1.26",
    "requests>=2.31",       # For eval calls to the deployed endpoint
]

[project.optional-dependencies]
ingest = []  # Already in main deps; this is a placeholder for future split
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "eval"]
